--- a/app/src/main/res/layout/activity_profesor_listado.xml
+++ b/app/src/main/res/layout/activity_profesor_listado.xml
@@ -8,8 +8,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/profesorText"
-        android:layout_margin="7dp"
-        android:hint="Nombre del profesor" />
+        android:hint="Nombre del profesor"
+        android:layout_marginTop="5dp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/profesorlist"
