--- a/app/src/main/res/layout-land/activity_ayuda.xml
+++ b/app/src/main/res/layout-land/activity_ayuda.xml
@@ -135,7 +135,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/editText"
             android:layout_alignParentStart="true"
-            android:hint="¿Qué te gustaría pder hacer/tener en la aplicación?"
+            android:hint="¿Qué te gustaría poder hacer/tener en la aplicación?"
             android:textSize="15dp"
             android:layout_below="@+id/checkBox"
             android:layout_marginBottom="3dp"
