--- a/app/src/main/res/layout/activity_ayuda.xml
+++ b/app/src/main/res/layout/activity_ayuda.xml
@@ -159,8 +159,8 @@
                 android:elegantTextHeight="false" />
 
             <EditText
-                android:layout_width="250dp"
-                android:layout_height="wrap_content"
+                android:layout_width="235dp"
+                android:layout_height="65dp"
                 android:id="@+id/editText"
                 android:layout_alignParentStart="false"
                 android:hint="¿Qué te gustaría poder hacer/tener en la aplicación?"
