--- a/app/src/main/res/layout/activity_asignatura_listado.xml
+++ b/app/src/main/res/layout/activity_asignatura_listado.xml
@@ -24,9 +24,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/TextViewEspecilialidad"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="130dp"
+        android:layout_marginRight="86dp"
         android:textSize="14dp"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:layout_alignParentStart="true" />
     <Spinner
         android:id="@+id/spinnerespecialidad"
         android:layout_width="wrap_content"
@@ -34,7 +35,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/TextViewEspecilialidad"
         android:layout_toStartOf="@+id/spinnercuatri"
-        android:layout_marginBottom="15dp"/>
+        android:layout_marginBottom="15dp"
+        />
     <Spinner
         android:id="@+id/spinnercuatri"
         android:layout_width="wrap_content"
