--- a/app/src/main/res/layout/profesor.xml
+++ b/app/src/main/res/layout/profesor.xml
@@ -31,7 +31,7 @@
         <ImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:src="@drawable/profesor2"
+            android:src="@drawable/profesor_icon2"
             android:layout_marginLeft="10dp"
             android:id="@+id/imagenProfesor"
             android:scaleType="fitXY"
