--- a/app/src/main/res/layout-land/activity_profesor_pantalla.xml
+++ b/app/src/main/res/layout-land/activity_profesor_pantalla.xml
@@ -7,14 +7,6 @@
     tools:context="nemesis.diiscover.ProfesorPantalla"
     android:background="#ffffff">
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/profesor2"
-        android:id="@+id/imagenProfesor"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/view2" />
-
     <View
         android:layout_width="fill_parent"
         android:layout_height="0.5dp"
@@ -32,10 +24,9 @@
         android:padding="10dp"
         android:textAlignment="center"
         android:textIsSelectable="false"
-        android:textSize="19dp"
-        android:layout_marginStart="75dp"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/imagenProfesor" />
+        android:textSize="17dp"
+        android:layout_marginStart="85dp"
+        android:layout_alignParentTop="true" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,22 +36,20 @@
         android:padding="10dp"
         android:textAlignment="center"
         android:textIsSelectable="false"
-        android:textSize="19dp"
+        android:textSize="17dp"
         android:layout_above="@+id/textViewtutoriasProfesor"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="45dp" />
+        android:layout_marginRight="90dp" />
 
     <TextView
-        android:layout_width="250dp"
-        android:layout_height="65dp"
+        android:layout_width="275dp"
+        android:layout_height="90dp"
         android:id="@+id/textViewtutoriasProfesor"
         android:padding="10dp"
         android:height="100dp"
         android:textSize="14dp"
         android:textColor="#757575"
-        android:layout_below="@+id/textViewcorreoProfesor"
-        android:layout_toEndOf="@+id/imagenProfesor"
-        android:layout_margin="5dp" />
+        android:layout_below="@+id/textViewcorreoProfesor" />
     <View
         android:layout_width="fill_parent"
         android:layout_height="0.5dp"
@@ -136,24 +125,23 @@
         android:textStyle="bold"
         android:text="ENVIAR CORREO"
         android:layout_gravity="right|center_vertical"
-        android:textColor="#03A9F4"
-        android:background="#ffffff"
-        android:singleLine="false"
 
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:onClick="irAEnviarCorreo"
+        android:textColor="#ffffff"
+        android:background="#03A9F4"
+        android:singleLine="false"
         />
 
     <TextView
-        android:layout_width="200dp"
-        android:layout_height="70dp"
+        android:layout_width="290dp"
+        android:layout_height="90dp"
         android:id="@+id/textViewAsignaturasProfesor"
         android:padding="10dp"
         android:height="100dp"
         android:textSize="14dp"
         android:textColor="#757575"
         android:layout_below="@+id/textView12"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="5dp" />
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
