--- a/app/src/main/res/layout/activity_profesor_pantalla.xml
+++ b/app/src/main/res/layout/activity_profesor_pantalla.xml
@@ -6,14 +6,16 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="nemesis.diiscover.ProfesorPantalla"
     android:background="#ffffff">
-
-    <ImageView
-        android:layout_width="135dp"
-        android:layout_height="135dp"
-        android:src="@drawable/profesor3"
-        android:id="@+id/imagenProfesor"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+     <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true">
+        <RelativeLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
 
     <View
         android:layout_width="fill_parent"
@@ -34,7 +36,7 @@
         android:textSize="20dp"
         android:layout_below="@+id/imagenProfesor"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="3dp" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -50,10 +52,9 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:id="@+id/textViewtutoriasProfesor"
         android:padding="10dp"
-        android:height="100dp"
         android:textSize="15dp"
         android:layout_below="@+id/textViewcorreoProfesor"
         android:layout_alignParentStart="true"
@@ -124,30 +125,35 @@
         android:paddingLeft="10dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp" />
-    <Button android:id="@+id/confirmar"
-        android:layout_width="130dp"
-        android:layout_height="wrap_content"
-        android:textSize="14dp"
-        android:textStyle="bold"
-        android:text="ENVIAR CORREO"
-        android:layout_gravity="right|center_vertical"
-        android:textColor="#ffffff"
-        android:background="#03A9F4"
-        android:singleLine="false"
 
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="irAEnviarCorreo" />
-
-    <TextView
+            <TextView
         android:layout_width="wrap_content"
-        android:layout_height="41dp"
+        android:layout_height="wrap_content"
         android:id="@+id/textViewAsignaturasProfesor"
         android:padding="10dp"
-        android:height="100dp"
         android:textSize="15dp"
         android:textColor="#757575"
         android:layout_below="@+id/textView12"
         android:layout_alignEnd="@+id/view"
         android:layout_alignStart="@+id/view" />
 </RelativeLayout>
+     </ScrollView>
+
+    <Button android:id="@+id/confirmar"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:textSize="14dp"
+        android:textStyle="bold"
+        android:text="ENVIAR CORREO"
+        android:textColor="#ffffff"
+        android:background="#03A9F4"
+        android:singleLine="false"
+
+        android:onClick="irAEnviarCorreo"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
+
+
+</RelativeLayout>
+
+
