--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,7 +6,7 @@
     <Button
         android:layout_width="310dp"
         android:layout_height="140dp"
-        android:text=" Laboratorios"
+        android:text="LABORATORIOS"
         android:id="@+id/laboratorios"
         android:drawableLeft="@drawable/computer2"
         style="?android:attr/borderlessButtonStyle"
@@ -19,7 +19,7 @@
     <Button
         android:layout_width="300dp"
         android:layout_height="140dp"
-        android:text="asignaturas"
+        android:text="ASIGNATURAS"
         android:id="@+id/Asignaturas"
         android:drawableLeft="@drawable/books"
         style="?android:attr/borderlessButtonStyle"
@@ -41,7 +41,7 @@
         android:textSize="20dp"
         android:drawableLeft="@drawable/profesor4"
         style="?android:attr/borderlessButtonStyle"
-        android:text="profesores"
+        android:text="PROFESORES"
         android:layout_below="@+id/laboratorios"
         android:layout_alignParentStart="true" />
     <Button
@@ -54,7 +54,7 @@
         android:onClick="irAAyudar"
         android:drawableLeft="@drawable/mano4"
         style="?android:attr/borderlessButtonStyle"
-        android:text="Ayúdanos"
+        android:text="AYÚDANOS"
         android:layout_alignTop="@+id/profesores"
         android:layout_alignParentEnd="true" />
 
