--- a/app/src/main/res/layout-land/activity_laboratorio_pantalla.xml
+++ b/app/src/main/res/layout-land/activity_laboratorio_pantalla.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:src="@drawable/computer2"
+        android:src="@drawable/computer4"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="20dp" />
@@ -26,7 +26,8 @@
         android:textSize="20dp"
         android:layout_below="@+id/imageView"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="7dp" />
+        android:layout_marginBottom="7dp"
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -125,9 +126,9 @@
         android:id="@+id/textView7"
         android:textColor="#696969"
         android:textSize="20dp"
-        android:layout_marginTop="15dp"
-        android:layout_alignTop="@+id/imageView"
-        android:layout_toEndOf="@+id/textView8" />
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/imageView"
+        android:layout_marginLeft="20dp" />
 
     <Button
         android:layout_width="wrap_content"
