--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,52 +4,53 @@
     tools:context=".MainActivity">
 
     <Button
-        android:layout_width="310dp"
-        android:layout_height="140dp"
+        android:layout_width="270dp"
+        android:layout_height="130dp"
         android:text="LABORATORIOS"
         android:id="@+id/laboratorios"
-        android:drawableLeft="@drawable/computer2"
+        android:drawableLeft="@drawable/computer4"
         style="?android:attr/borderlessButtonStyle"
         android:textColor="#03A9F4"
-        android:textSize="20dp"
+        android:textSize="18dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:onClick="irALaboratorios" />
+        android:onClick="irALaboratorios"
+        android:layout_marginTop="15dp" />
 
     <Button
-        android:layout_width="300dp"
-        android:layout_height="140dp"
+        android:layout_width="270dp"
+        android:layout_height="130dp"
         android:text="ASIGNATURAS"
         android:id="@+id/Asignaturas"
-        android:drawableLeft="@drawable/books"
+        android:drawableLeft="@drawable/books4"
         style="?android:attr/borderlessButtonStyle"
 
         android:textColor="#03A9F4"
-        android:textSize="20dp"
+        android:textSize="18dp"
         android:onClick="irAAsignaturas"
-        android:layout_alignParentTop="true"
+        android:layout_alignTop="@+id/laboratorios"
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:layout_width="300dp"
-        android:layout_height="140dp"
+        android:layout_width="270dp"
+        android:layout_height="130dp"
 
         android:id="@+id/profesores"
         android:onClick="irAProfesores"
 
         android:textColor="#03A9F4"
-        android:textSize="20dp"
+        android:textSize="18dp"
         android:drawableLeft="@drawable/profesor4"
         style="?android:attr/borderlessButtonStyle"
         android:text="PROFESORES"
-        android:layout_below="@+id/laboratorios"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="15dp" />
     <Button
-        android:layout_width="300dp"
-        android:layout_height="140dp"
-
+        android:layout_width="270dp"
+        android:layout_height="130dp"
         android:textColor="#03A9F4"
-        android:textSize="20dp"
+        android:textSize="18dp"
         android:id="@+id/ayudar"
         android:onClick="irAAyudar"
         android:drawableLeft="@drawable/mano4"
