--- a/app/src/main/res/layout/activity_ayuda.xml
+++ b/app/src/main/res/layout/activity_ayuda.xml
@@ -129,7 +129,18 @@
             android:layout_below="@+id/checkBox5"
             android:layout_alignParentEnd="true"
             android:layout_margin="2dp" />
-
+                <EditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="85dp"
+                    android:id="@+id/editText"
+                    android:layout_alignParentStart="false"
+                    android:hint="¿Qué te gustaría poder hacer/tener en la aplicación?"
+                    android:textSize="15dp"
+                    android:layout_below="@+id/checkBox"
+                    android:layout_marginBottom="3dp"
+                    android:layout_gravity="left|center_vertical"
+                    android:layout_marginLeft="5dp"
+                    android:layout_alignParentEnd="true" />
             </RelativeLayout>
 
 
@@ -158,18 +169,7 @@
                 android:layout_alignParentRight="true"
                 android:elegantTextHeight="false" />
 
-            <EditText
-                android:layout_width="235dp"
-                android:layout_height="65dp"
-                android:id="@+id/editText"
-                android:layout_alignParentStart="false"
-                android:hint="¿Qué te gustaría poder hacer/tener en la aplicación?"
-                android:textSize="15dp"
-                android:layout_below="@+id/checkBox"
-                android:layout_marginBottom="3dp"
-                android:layout_alignEnd="@+id/checkBox6"
-                android:layout_gravity="left|center_vertical"
-                android:layout_marginLeft="5dp" />
+
         </FrameLayout>
 
     </LinearLayout>
