--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,14 @@
     tools:context=".MainActivity">
 
     <Button
-        android:layout_width="175dp"
-        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="LABORATORIOS"
         android:id="@+id/laboratorios"
-        android:drawableTop="@drawable/computer2"
+        android:drawableTop="@drawable/computer4"
         style="?android:attr/borderlessButtonStyle"
         android:textColor="#03A9F4"
-        android:textSize="20dp"
+        android:textSize="18dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="10dp"
@@ -19,11 +19,11 @@
         android:onClick="irALaboratorios" />
 
     <Button
-        android:layout_width="175dp"
-        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="ASIGNATURAS"
         android:id="@+id/Asignaturas"
-        android:drawableTop="@drawable/books"
+        android:drawableTop="@drawable/books4"
         style="?android:attr/borderlessButtonStyle"
 
         android:textColor="#03A9F4"
@@ -36,8 +36,8 @@
         android:elegantTextHeight="false" />
 
     <Button
-        android:layout_width="175dp"
-        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
         android:id="@+id/profesores"
         android:onClick="irAProfesores"
@@ -51,10 +51,10 @@
         android:layout_below="@+id/laboratorios"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="40dp" />
+        android:layout_marginTop="50dp" />
     <Button
-        android:layout_width="175dp"
-        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
         android:textColor="#03A9F4"
         android:textSize="20dp"
@@ -62,7 +62,7 @@
         android:onClick="irAAyudar"
         android:drawableTop="@drawable/mano4"
         style="?android:attr/borderlessButtonStyle"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="20dp"
         android:text="AYÚDANOS"
         android:layout_alignTop="@+id/profesores"
         android:layout_alignParentEnd="true" />
