--- a/app/src/main/res/layout/profesor.xml
+++ b/app/src/main/res/layout/profesor.xml
@@ -16,10 +16,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        card_view:cardBackgroundColor="#B3E5FC"
-
-        android:shadowColor="#ae010001"
-        android:background="#8cd3ff">
+        >
 
 
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -27,6 +24,7 @@
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+
             android:background="#ffffff">
         <ImageView
             android:layout_width="70dp"
@@ -91,7 +89,8 @@
                 android:background="#757575"
                 android:layout_marginRight="25dp"
                 android:layout_alignParentBottom="true"
-                android:layout_alignStart="@+id/imageView2" />
+                android:layout_alignStart="@+id/imageView2"
+                android:layout_marginBottom="4dp" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
