--- a/app/src/main/res/layout/activity_acerca_de.xml
+++ b/app/src/main/res/layout/activity_acerca_de.xml
@@ -12,7 +12,8 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="20dp">
+            android:layout_margin="20dp"
+            android:weightSum="1">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -60,7 +61,9 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/diseñadora"
-                android:id="@+id/textView16" />
+                android:id="@+id/textView16"
+                android:layout_weight="0.19"
+                android:layout_marginBottom="30dp" />
         </LinearLayout>
     </ScrollView>
 
