--- a/app/src/main/res/layout-land/activity_asignatura_listado.xml
+++ b/app/src/main/res/layout-land/activity_asignatura_listado.xml
@@ -5,50 +5,45 @@
     android:background="#ffffff">
     <TextView
         android:text="Cuatrimestre"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/TextViewCuatrimestre"
-        android:layout_marginLeft="10dp"
 
-        android:layout_marginStart="130dp"
         android:textSize="14dp"
-        android:layout_alignTop="@+id/TextViewEspecilialidad"
-        android:layout_toEndOf="@+id/TextViewEspecilialidad"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="10dp" />
+        android:layout_above="@+id/spinnerespecialidad"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="20dp" />
     <TextView
         android:text="Especialidad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/TextViewEspecilialidad"
-        android:layout_marginLeft="150dp"
-
-        android:layout_marginRight="140dp"
         android:textSize="14dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp" />
     <Spinner
         android:id="@+id/spinnerespecialidad"
         android:layout_width="wrap_content"
-        android:layout_marginLeft="14dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/TextViewEspecilialidad"
-        android:layout_toStartOf="@+id/spinnercuatri"
-        android:layout_marginBottom="15dp"/>
+        android:layout_alignParentStart="true" />
     <Spinner
         android:id="@+id/spinnercuatri"
         android:layout_width="wrap_content"
         android:layout_marginLeft="2dp"
+        android:layout_marginRight="20dp"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/spinnerespecialidad"
-        android:layout_toEndOf="@+id/TextViewEspecilialidad"
-
-        android:layout_marginBottom="15dp"/>
-
+        android:layout_below="@+id/TextViewCuatrimestre"
+        android:layout_alignParentEnd="true" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/asignaturalist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/spinnercuatri" />
+
+
 </RelativeLayout>
