--- a/app/src/main/res/layout/activity_asignatura_listado.xml
+++ b/app/src/main/res/layout/activity_asignatura_listado.xml
@@ -5,46 +5,39 @@
     android:background="#ffffff">
     <TextView
         android:text="Cuatrimestre"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/TextViewCuatrimestre"
         android:layout_marginLeft="10dp"
 
-        android:layout_marginStart="130dp"
         android:textSize="14dp"
-        android:layout_alignTop="@+id/TextViewEspecilialidad"
-        android:layout_toEndOf="@+id/TextViewEspecilialidad"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="10dp" />
+        android:layout_above="@+id/spinnercuatri"
+        android:layout_alignEnd="@+id/spinnercuatri" />
     <TextView
         android:text="Especialidad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/TextViewEspecilialidad"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="86dp"
         android:textSize="14dp"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp" />
     <Spinner
         android:id="@+id/spinnerespecialidad"
         android:layout_width="wrap_content"
-        android:layout_marginLeft="14dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/TextViewEspecilialidad"
-        android:layout_toStartOf="@+id/spinnercuatri"
-        android:layout_marginBottom="15dp"
-        />
+        android:layout_alignParentStart="true" />
     <Spinner
         android:id="@+id/spinnercuatri"
         android:layout_width="wrap_content"
         android:layout_marginLeft="2dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
         android:layout_alignTop="@+id/spinnerespecialidad"
-        android:layout_toEndOf="@+id/TextViewEspecilialidad" />
+        android:layout_toEndOf="@+id/spinnerespecialidad" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/asignaturalist"
         android:layout_width="match_parent"
