--- a/app/src/main/res/layout/activity_profesor_pantalla.xml
+++ b/app/src/main/res/layout/activity_profesor_pantalla.xml
@@ -24,20 +24,8 @@
 
         android:layout_marginLeft="10dp"
         android:layout_below="@+id/textViewDespachoProfesor" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Tutorías"
-        android:id="@+id/textViewcorreoProfesor"
-        android:padding="10dp"
-        android:textAlignment="center"
-        android:textIsSelectable="false"
-        android:textSize="20dp"
-        android:layout_below="@+id/imagenProfesor"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="3dp" />
-    <TextView
+
+            <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -50,17 +38,7 @@
         android:layout_below="@+id/textView6"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textViewtutoriasProfesor"
-        android:padding="10dp"
-        android:textSize="15dp"
-        android:layout_below="@+id/textViewcorreoProfesor"
-        android:layout_alignParentStart="true"
-        android:textColor="#757575"
-        android:layout_alignParentEnd="true" />
-    <View
+            <View
         android:layout_width="fill_parent"
         android:layout_height="0.5dp"
         android:background="#757575"
@@ -78,8 +56,8 @@
         android:textAlignment="center"
         android:textIsSelectable="false"
         android:textSize="18dp"
-        android:layout_below="@+id/textViewtutoriasProfesor"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/imagenProfesor" />
 
     <TextView
         android:layout_width="wrap_content"
