--- a/app/src/main/res/layout/activity_asignatura_pantalla.xml
+++ b/app/src/main/res/layout/activity_asignatura_pantalla.xml
@@ -36,7 +36,8 @@
             android:textAlignment="center"
             android:textIsSelectable="false"
             android:textSize="20dp"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
